# libssvm

./: CMakeLists.txt
lib/vm/: vm.cpp
loader/: filemgr.cpp  loader.cpp
support/: filesystem.h  log.cpp  log.h
